Added EC2/SSM checks to avoid race conditioning

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,10 +52,6 @@ jobs:
         run: |
           aws s3 cp build/app.zip "s3://${ARTIFACT_BUCKET}/${ARTIFACT_KEY}" --acl private
       
-      #One-off to verify we can read instance profile (debugging for policy-based issues)
-      - name: Can read instance profile?
-        run: aws iam get-instance-profile --instance-profile-name ddemo-ec2-profile
-      
       # Terraform to provision/update infra in ./infra
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -73,6 +69,40 @@ jobs:
             -var="artifact_bucket=${{ env.ARTIFACT_BUCKET }}" \
             -var="artifact_key=${{ env.ARTIFACT_KEY }}"
 
+      - name: Capture Terraform outputs (fresh IDs)
+        id: tf_out
+        working-directory: infra
+        run: |
+            echo "INSTANCE_ID=$(terraform output -raw instance_id)" >> "$GITHUB_OUTPUT"
+            echo "PUBLIC_DNS=$(terraform output -raw public_dns)"   >> "$GITHUB_OUTPUT"
+        
+      - name: Wait for EC2 to be running
+        run: |
+            aws ec2 wait instance-running --instance-ids "${{ steps.tf_out.outputs.INSTANCE_ID }}"
+    
+      - name: Wait for EC2 status checks to pass
+        run: |
+            aws ec2 wait instance-status-ok --instance-ids "${{ steps.tf_out.outputs.INSTANCE_ID }}"
+    
+      - name: Wait for SSM registration
+        run: |
+            set -euo pipefail
+            IID="${{ steps.tf_out.outputs.INSTANCE_ID }}"
+            echo "Waiting for SSM to see $IID ..."
+            for i in {1..60}; do
+            CNT=$(aws ssm describe-instance-information \
+                --query "InstanceInformationList[?InstanceId=='$IID'] | length(@)" \
+                --output text || echo 0)
+            if [ "$CNT" = "1" ]; then
+                echo "Instance registered with SSM."
+                exit 0
+            fi
+            echo "Not registered yet ($i/60); sleeping 5s..."
+            sleep 5
+            done
+            echo "SSM registration timeout." >&2
+            exit 1
+
       # Read instance ID & public DNS from Terraform outputs
       - name: Read Terraform outputs
         id: tf
@@ -81,15 +111,23 @@ jobs:
           echo "INSTANCE_ID=$(terraform output -raw instance_id)" >> $GITHUB_OUTPUT
           echo "PUBLIC_DNS=$(terraform output -raw public_dns)" >> $GITHUB_OUTPUT
 
-      # Trigger deploy script on the instance via SSM Run Command
       - name: Trigger deploy via SSM
         run: |
-          aws ssm send-command \
-            --instance-ids "${{ steps.tf.outputs.INSTANCE_ID }}" \
-            --document-name "AWS-RunShellScript" \
-            --comment "DDemo deploy" \
-            --parameters commands=["/usr/local/bin/deploy.sh s3://${{ env.ARTIFACT_BUCKET }}/${{ env.ARTIFACT_KEY }}"] \
-            --output text
+            aws ssm send-command \
+                --instance-ids "${{ steps.tf_out.outputs.INSTANCE_ID }}" \
+                --document-name "AWS-RunShellScript" \
+                --comment "DDemo deploy" \
+                --parameters commands=["/usr/local/bin/deploy.sh s3://${{ env.ARTIFACT_BUCKET }}/${{ env.ARTIFACT_KEY }}"] \
+                --output text
+    #   # Trigger deploy script on the instance via SSM Run Command
+    #   - name: Trigger deploy via SSM
+    #     run: |
+    #       aws ssm send-command \
+    #         --instance-ids "${{ steps.tf.outputs.INSTANCE_ID }}" \
+    #         --document-name "AWS-RunShellScript" \
+    #         --comment "DDemo deploy" \
+    #         --parameters commands=["/usr/local/bin/deploy.sh s3://${{ env.ARTIFACT_BUCKET }}/${{ env.ARTIFACT_KEY }}"] \
+    #         --output text
 
       # (Optional but nice) Wait for app to be healthy
       - name: Wait for /healthz
