--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,31 @@ env:
   ARTIFACT_KEY: releases/current.zip
 
 jobs:
+  lint-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install app + dev deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+
+      - name: Lint (flake8)
+        run: |
+          flake8 .
+
+      - name: Run tests (pytest)
+        run: |
+          pytest -q
+
   build-and-deploy:
     runs-on: ubuntu-latest
 
