--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install app + dev deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r app/requirements.txt
           pip install -r requirements-dev.txt
 
       - name: Lint (flake8)
@@ -41,6 +41,7 @@ jobs:
           pytest -q
 
   build-and-deploy:
+    needs: [lint-and-test] #Adding lint/test dependency
     runs-on: ubuntu-latest
 
     steps:
