--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -166,136 +166,136 @@ jobs:
       - name: Echo site URL
         run: echo "Site == http://${{ steps.tf.outputs.PUBLIC_DNS }}"
 
-  observe-with-datadog:
-    needs: [build-and-deploy]   # or whatever your deploy job id is
-    runs-on: ubuntu-latest
-    env:
-      DATADOG_API_KEY: ${{ secrets.DD_API_KEY }}
-      DATADOG_SITE: ${{ secrets.DD_SITE }}
-      DD_ENV: ${{ secrets.DD_ENV || 'demo' }}
-      DD_SERVICE: ${{ secrets.DD_SERVICE || 'ddemo-urlshort' }}
-    steps:
-      - name: Mark start time
-        id: t0
-        run: echo "START_TS=$(date +%s)" >> $GITHUB_OUTPUT
+  # observe-with-datadog:
+  #   needs: [build-and-deploy]   # or whatever your deploy job id is
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     DATADOG_API_KEY: ${{ secrets.DD_API_KEY }}
+  #     DATADOG_SITE: ${{ secrets.DD_SITE }}
+  #     DD_ENV: ${{ secrets.DD_ENV || 'demo' }}
+  #     DD_SERVICE: ${{ secrets.DD_SERVICE || 'ddemo-urlshort' }}
+  #   steps:
+  #     - name: Mark start time
+  #       id: t0
+  #       run: echo "START_TS=$(date +%s)" >> $GITHUB_OUTPUT
 
-      - name: Emit pipeline success metric
-        if: success()
-        run: |
-          set -euo pipefail
-          TS=$(date +%s)
-          HOST="${{ secrets.DD_SITE }}"
-          # Normalize site (allow us5.datadog.com) -> us5.datadoghq.com
-          if [[ "$HOST" == *"datadog.com" ]] && [[ "$HOST" != *"datadoghq.com" ]]; then
-            HOST="${HOST/datadog.com/datadoghq.com}"
-          fi
-          API_HOST="api.${HOST}"
+  #     - name: Emit pipeline success metric
+  #       if: success()
+  #       run: |
+  #         set -euo pipefail
+  #         TS=$(date +%s)
+  #         HOST="${{ secrets.DD_SITE }}"
+  #         # Normalize site (allow us5.datadog.com) -> us5.datadoghq.com
+  #         if [[ "$HOST" == *"datadog.com" ]] && [[ "$HOST" != *"datadoghq.com" ]]; then
+  #           HOST="${HOST/datadog.com/datadoghq.com}"
+  #         fi
+  #         API_HOST="api.${HOST}"
 
-          # v2 series payload (omit type to avoid enum parsing issues)
-          PAYLOAD=$(cat <<'JSON'
-          {
-            "series": [
-              {
-                "metric": "ddemo.pipeline.status",
-                "points": [
-                  { "timestamp": __TS__, "value": 1 }
-                ],
-                "tags": [
-                  "workflow:${{ github.workflow }}",
-                  "job:${{ github.job }}",
-                  "sha:${{ github.sha }}",
-                  "branch:${{ github.ref_name }}",
-                  "service:ddemo-urlshort",
-                  "env:demo"
-                ]
-              }
-            ]
-          }
-          JSON
-          )
-          PAYLOAD=${PAYLOAD/__TS__/$TS}
+  #         # v2 series payload (omit type to avoid enum parsing issues)
+  #         PAYLOAD=$(cat <<'JSON'
+  #         {
+  #           "series": [
+  #             {
+  #               "metric": "ddemo.pipeline.status",
+  #               "points": [
+  #                 { "timestamp": __TS__, "value": 1 }
+  #               ],
+  #               "tags": [
+  #                 "workflow:${{ github.workflow }}",
+  #                 "job:${{ github.job }}",
+  #                 "sha:${{ github.sha }}",
+  #                 "branch:${{ github.ref_name }}",
+  #                 "service:ddemo-urlshort",
+  #                 "env:demo"
+  #               ]
+  #             }
+  #           ]
+  #         }
+  #         JSON
+  #         )
+  #         PAYLOAD=${PAYLOAD/__TS__/$TS}
 
-          curl -sS -X POST "https://${API_HOST}/api/v2/series" \
-            -H "Content-Type: application/json" \
-            -H "DD-API-KEY: ${{ secrets.DD_API_KEY }}" \
-            -d "$PAYLOAD"
+  #         curl -sS -X POST "https://${API_HOST}/api/v2/series" \
+  #           -H "Content-Type: application/json" \
+  #           -H "DD-API-KEY: ${{ secrets.DD_API_KEY }}" \
+  #           -d "$PAYLOAD"
 
-      - name: Emit pipeline duration metric (seconds)
-        if: always()
-        run: |
-          set -euo pipefail
-          END=$(date +%s)
-          START=${{ steps.t0.outputs.START_TS }}
-          DURATION=$(( END - START ))
+  #     - name: Emit pipeline duration metric (seconds)
+  #       if: always()
+  #       run: |
+  #         set -euo pipefail
+  #         END=$(date +%s)
+  #         START=${{ steps.t0.outputs.START_TS }}
+  #         DURATION=$(( END - START ))
 
-          HOST="${{ secrets.DD_SITE }}"
-          if [[ "$HOST" == *"datadog.com" ]] && [[ "$HOST" != *"datadoghq.com" ]]; then
-            HOST="${HOST/datadog.com/datadoghq.com}"
-          fi
-          API_HOST="api.${HOST}"
+  #         HOST="${{ secrets.DD_SITE }}"
+  #         if [[ "$HOST" == *"datadog.com" ]] && [[ "$HOST" != *"datadoghq.com" ]]; then
+  #           HOST="${HOST/datadog.com/datadoghq.com}"
+  #         fi
+  #         API_HOST="api.${HOST}"
 
-          PAYLOAD=$(cat <<'JSON'
-          {
-            "series": [
-              {
-                "metric": "ddemo.pipeline.deploy_duration_s",
-                "points": [
-                  { "timestamp": __TS__, "value": __VAL__ }
-                ],
-                "tags": [
-                  "workflow:${{ github.workflow }}",
-                  "job:${{ github.job }}",
-                  "sha:${{ github.sha }}",
-                  "branch:${{ github.ref_name }}",
-                  "service:ddemo-urlshort",
-                  "env:demo"
-                ]
-              }
-            ]
-          }
-          JSON
-          )
-          PAYLOAD=${PAYLOAD/__TS__/$END}
-          PAYLOAD=${PAYLOAD/__VAL__/$DURATION}
+  #         PAYLOAD=$(cat <<'JSON'
+  #         {
+  #           "series": [
+  #             {
+  #               "metric": "ddemo.pipeline.deploy_duration_s",
+  #               "points": [
+  #                 { "timestamp": __TS__, "value": __VAL__ }
+  #               ],
+  #               "tags": [
+  #                 "workflow:${{ github.workflow }}",
+  #                 "job:${{ github.job }}",
+  #                 "sha:${{ github.sha }}",
+  #                 "branch:${{ github.ref_name }}",
+  #                 "service:ddemo-urlshort",
+  #                 "env:demo"
+  #               ]
+  #             }
+  #           ]
+  #         }
+  #         JSON
+  #         )
+  #         PAYLOAD=${PAYLOAD/__TS__/$END}
+  #         PAYLOAD=${PAYLOAD/__VAL__/$DURATION}
 
-          curl -sS -X POST "https://${API_HOST}/api/v2/series" \
-            -H "Content-Type: application/json" \
-            -H "DD-API-KEY: ${{ secrets.DD_API_KEY }}" \
-            -d "$PAYLOAD"
+  #         curl -sS -X POST "https://${API_HOST}/api/v2/series" \
+  #           -H "Content-Type: application/json" \
+  #           -H "DD-API-KEY: ${{ secrets.DD_API_KEY }}" \
+  #           -d "$PAYLOAD"
 
-      - name: Create Datadog event
-        env:
-          DD_SITE: ${{ secrets.DD_SITE }}
-          DD_API_KEY: ${{ secrets.DD_API_KEY }}
-          DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
-        run: |
-          set -euo pipefail
-          if [[ -z "${DD_APP_KEY:-}" ]]; then
-            echo "DD_APP_KEY secret is required for Events v2" >&2
-            exit 1
-          fi
-          HOST="$DD_SITE"
-          if [[ "$HOST" == *"datadog.com" ]] && [[ "$HOST" != *"datadoghq.com" ]]; then
-            HOST="${HOST/datadog.com/datadoghq.com}"
-          fi
-          API_HOST="api.${HOST}"
+  #     - name: Create Datadog event
+  #       env:
+  #         DD_SITE: ${{ secrets.DD_SITE }}
+  #         DD_API_KEY: ${{ secrets.DD_API_KEY }}
+  #         DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
+  #       run: |
+  #         set -euo pipefail
+  #         if [[ -z "${DD_APP_KEY:-}" ]]; then
+  #           echo "DD_APP_KEY secret is required for Events v2" >&2
+  #           exit 1
+  #         fi
+  #         HOST="$DD_SITE"
+  #         if [[ "$HOST" == *"datadog.com" ]] && [[ "$HOST" != *"datadoghq.com" ]]; then
+  #           HOST="${HOST/datadog.com/datadoghq.com}"
+  #         fi
+  #         API_HOST="api.${HOST}"
 
-          TITLE="Deploy succeeded"
-          TEXT="Workflow ${{ github.workflow }} run #${{ github.run_number }} deployed ${{ github.sha }}"
-          TAGS="workflow:${{ github.workflow }},branch:${{ github.ref_name }},service:${{ env.DD_SERVICE }},env:${{ env.DD_ENV }}"
+  #         TITLE="Deploy succeeded"
+  #         TEXT="Workflow ${{ github.workflow }} run #${{ github.run_number }} deployed ${{ github.sha }}"
+  #         TAGS="workflow:${{ github.workflow }},branch:${{ github.ref_name }},service:${{ env.DD_SERVICE }},env:${{ env.DD_ENV }}"
 
-          EVENT_PAYLOAD=$(cat <<JSON
-          {
-            "title": "${TITLE}",
-            "text": "${TEXT}",
-            "tags": [$(printf '"%s",' ${TAGS//,/ } | sed 's/,$//')],
-            "source": "github_actions"
-          }
-          JSON
-          )
+  #         EVENT_PAYLOAD=$(cat <<JSON
+  #         {
+  #           "title": "${TITLE}",
+  #           "text": "${TEXT}",
+  #           "tags": [$(printf '"%s",' ${TAGS//,/ } | sed 's/,$//')],
+  #           "source": "github_actions"
+  #         }
+  #         JSON
+  #         )
 
-          curl -sS -X POST "https://${API_HOST}/api/v2/events" \
-            -H "Content-Type: application/json" \
-            -H "DD-API-KEY: ${DD_API_KEY}" \
-            -H "DD-APPLICATION-KEY: ${DD_APP_KEY}" \
-            -d "${EVENT_PAYLOAD}"
+  #         curl -sS -X POST "https://${API_HOST}/api/v2/events" \
+  #           -H "Content-Type: application/json" \
+  #           -H "DD-API-KEY: ${DD_API_KEY}" \
+  #           -H "DD-APPLICATION-KEY: ${DD_APP_KEY}" \
+  #           -d "${EVENT_PAYLOAD}"
