--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
-  schedule:
-    - cron: "*/30 * * * *"
+  # schedule:
+  #   - cron: "*/30 * * * *"
 
 permissions:
   id-token: write         # REQUIRED for GitHub OIDC -> AWS
@@ -17,55 +17,55 @@ env:
   ARTIFACT_KEY: releases/current.zip
 
 jobs:
-  lint-and-test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # lint-and-test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+  #     - name: Setup Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: "3.11"
 
-      - name: Install app + dev deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r app/requirements.txt
-          pip install -r requirements-dev.txt
+  #     - name: Install app + dev deps
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r app/requirements.txt
+  #         pip install -r requirements-dev.txt
 
-      - name: Lint (flake8)
-        run: |
-          flake8 .
+  #     - name: Lint (flake8)
+  #       run: |
+  #         flake8 .
 
-      - name: Ensure repo on PYTHONPATH
-        run: echo "PYTHONPATH=$PYTHONPATH:$GITHUB_WORKSPACE" >> $GITHUB_ENV
+  #     - name: Ensure repo on PYTHONPATH
+  #       run: echo "PYTHONPATH=$PYTHONPATH:$GITHUB_WORKSPACE" >> $GITHUB_ENV
 
-      - name: Run tests (pytest)
-        run: |
-          mkdir -p reports
-          pytest -q --junitxml=reports/junit.xml
+  #     - name: Run tests (pytest)
+  #       run: |
+  #         mkdir -p reports
+  #         pytest -q --junitxml=reports/junit.xml
 
-      - name: Jitter for scheduled runs
-        if: github.event_name == 'schedule'
-        run: sleep $((RANDOM % 180))
+  #     - name: Jitter for scheduled runs
+  #       if: github.event_name == 'schedule'
+  #       run: sleep $((RANDOM % 180))
 
-      # FOR DATADOG STEP
-      - name: Upload JUnit to Datadog
-        if: always()
-        env:
-          DATADOG_API_KEY: ${{ secrets.DD_API_KEY }}
-          DATADOG_SITE: ${{ secrets.DD_SITE }}
-        run: |
-          npm -g install @datadog/datadog-ci
-          datadog-ci junit upload \
-            --service ddemo-urlshort \
-            --env demo \
-            reports/junit.xml
+  #     # FOR DATADOG STEP
+  #     - name: Upload JUnit to Datadog
+  #       if: always()
+  #       env:
+  #         DATADOG_API_KEY: ${{ secrets.DD_API_KEY }}
+  #         DATADOG_SITE: ${{ secrets.DD_SITE }}
+  #       run: |
+  #         npm -g install @datadog/datadog-ci
+  #         datadog-ci junit upload \
+  #           --service ddemo-urlshort \
+  #           --env demo \
+  #           reports/junit.xml
 
   build-and-deploy:
-    if: github.event_name != 'schedule'
-    needs: [lint-and-test] #Adding lint/test dependency
+    # if: github.event_name != 'schedule'
+    # needs: [lint-and-test] #Adding lint/test dependency
     runs-on: ubuntu-latest
 
     steps:
