--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,18 +61,18 @@ jobs:
         run: |
           flake8 .
 
-      # FOR DATADOG STEP
-      - name: Upload JUnit to Datadog
-        if: always()
-        env:
-          DATADOG_API_KEY: ${{ secrets.DD_API_KEY }}
-          DATADOG_SITE: ${{ secrets.DD_SITE }}
-        run: |
-          npm -g install @datadog/datadog-ci
-          datadog-ci junit upload \
-            --service ddemo-urlshort \
-            --env demo \
-            reports/junit.xml
+      # # FOR DATADOG STEP
+      # - name: Upload JUnit to Datadog
+      #   if: always()
+      #   env:
+      #     DATADOG_API_KEY: ${{ secrets.DD_API_KEY }}
+      #     DATADOG_SITE: ${{ secrets.DD_SITE }}
+      #   run: |
+      #     npm -g install @datadog/datadog-ci
+      #     datadog-ci junit upload \
+      #       --service ddemo-urlshort \
+      #       --env demo \
+      #       reports/junit.xml
 
   build-and-deploy:
     if: github.event_name != 'schedule'
