--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,14 +27,16 @@ jobs:
 
   lint-and-test:
     if: github.event_name != 'schedule'
-    name: Lint & Test (py${{ matrix.python-version }})
-    runs-on: ubuntu-latest
+    name: Lint & Test (py${{ matrix.python-version }} on ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
     #=== Matrixed ===
     strategy:
       fail-fast: false
       matrix:
         python-version: [ "3.9", "3.10", "3.11" ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
         # python-version: [ '3.11' ]
+        # os: ubuntu-latest
 
     steps:
       - name: Checkout
