--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ "3.9", "3.10", "3.11" ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        # python-version: [ '3.11' ]
-        # os: ubuntu-latest
+        # python-version: [ "3.9", "3.10", "3.11" ]
+        # os: [ ubuntu-latest, macos-latest, windows-latest ] #Mixed success - Will fail with python path
+        # os: [ ubuntu-latest, macos-latest ] #Matrixed success
+        python-version: [ '3.11' ]
+        os: [ ubuntu-latest ]
 
     steps:
       - name: Checkout
