--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,71 +4,71 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
-  schedule:
-    - cron: "*/5 * * * *"
+  # schedule:
+  #   - cron: "*/5 * * * *"
 
 permissions:
   id-token: write         # REQUIRED for GitHub OIDC -> AWS
   contents: read          # allows checkout
 
 env:
-  AWS_REGION: us-east-1                         # keep consistent with your setup
+  AWS_REGION: us-east-1
   ARTIFACT_BUCKET: ddemo-artifacts-676206911400-us-east-1  #Will later want account id to be a secret.  Probably good to add for security section
   ARTIFACT_KEY: releases/current.zip
 
 jobs:
-  jitter_data_collection:
-    if: github.event_name == 'schedule'
-    runs-on: ubuntu-latest
-    steps:
-    - name: Jitter for scheduled runs
-      if: github.event_name == 'schedule'
-      run: sleep $((RANDOM % 120))
+  # jitter_data_collection:
+  #   if: github.event_name == 'schedule'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Jitter for scheduled runs
+  #     if: github.event_name == 'schedule'
+  #     run: sleep $((RANDOM % 120))
 
-  lint-and-test:
-    if: github.event_name != 'schedule'
-    name: Lint & Test (py${{ matrix.python-version }} on ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    #=== Matrixed ===
-    strategy:
-      fail-fast: false
-      matrix:
-        # python-version: [ "3.9", "3.10", "3.11" ]
-        # os: [ ubuntu-latest, macos-latest, windows-latest ] #Mixed success - Will fail with python path
-        # os: [ ubuntu-latest, macos-latest ] #Matrixed success
-        python-version: [ '3.11' ]
-        os: [ ubuntu-latest ]
+  # lint-and-test:
+  #   if: github.event_name != 'schedule'
+  #   name: Lint & Test (py${{ matrix.python-version }} on ${{ matrix.os }})
+  #   runs-on: ${{ matrix.os }}
+  #   #=== Matrixed ===
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       # python-version: [ "3.9", "3.10", "3.11" ]
+  #       # os: [ ubuntu-latest, macos-latest, windows-latest ] #Mixed success - Will fail with python path
+  #       # os: [ ubuntu-latest, macos-latest ] #Matrixed success
+  #       python-version: [ '3.11' ]
+  #       os: [ ubuntu-latest ]
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
+  #     - name: Setup Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: ${{ matrix.python-version }}
 
-      - name: Install app + dev deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r app/requirements.txt
-          pip install -r requirements-dev.txt
+  #     - name: Install app + dev deps
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r app/requirements.txt
+  #         pip install -r requirements-dev.txt
 
-      - name: Ensure repo on PYTHONPATH
-        run: echo "PYTHONPATH=$PYTHONPATH:$GITHUB_WORKSPACE" >> $GITHUB_ENV
+  #     - name: Ensure repo on PYTHONPATH
+  #       run: echo "PYTHONPATH=$PYTHONPATH:$GITHUB_WORKSPACE" >> $GITHUB_ENV
 
-      - name: Run tests (pytest)
-        run: |
-          mkdir -p reports
-          pytest -q --junitxml=reports/junit.xml
+  #     - name: Run tests (pytest)
+  #       run: |
+  #         mkdir -p reports
+  #         pytest -q --junitxml=reports/junit.xml
 
-      - name: Lint (flake8)
-        run: |
-          flake8 .
+  #     - name: Lint (flake8)
+  #       run: |
+  #         flake8 .
 
   build-and-deploy:
     if: github.event_name != 'schedule'
-    needs: [lint-and-test] #Adding lint/test dependency
+    # needs: [lint-and-test] #Adding lint/test dependency
     runs-on: ubuntu-latest
 
     steps:
