--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
 
   build-and-deploy:
     if: github.event_name != 'schedule'
-    # needs: [lint-and-test] #Adding lint/test dependency
+    needs: [lint-and-test] #Adding lint/test dependency
     runs-on: ubuntu-latest
 
     steps:
